# csci4230u

./: .dockerignore  .flake8  .gitignore  README.md  models.md  requirements.md
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  MIGRATION_INSTRUCTIONS.md  Makefile  README.md  alembic.ini  coverage.json  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 379a81d365b6_initial_migration.py  379a81d365b7_add_roles_and_seed_admin.py  6c8f534a6cef_add_volume_fields_to_books.py  841e4ef1f30e_seed_local_data.py  92aad8a1353b_seed_local_data.py  a72582e4c369_add_user_library_tables.py  d7b7820a4247_add_reading_status_to_user_books.py  eee11d2ac369_add_refresh_tokens_table.py  f35327670f79_add_updated_at_to_refresh_tokens.py
backend/src/: __init__.py  config.py  database.py  main.py  security.py
backend/src/api/: auth.py  books.py  clubs.py  deps.py  library.py  meetings.py  pages.py  users.py
backend/src/handlers/: __init__.py
backend/src/models/: __init__.py  base.py  book.py  club.py  group.py  meeting.py  page.py  refresh_token.py  role.py  user.py
backend/src/scripts/: seed.py
backend/src/storage/: __init__.py
backend/src/transports/: __init__.py
backend/tests/: SELENIUM_README.md  __init__.py  conftest.py  test_schema_validation.py  test_security.py  test_selenium_library.py  test_simple_schemas.py
backend/tests/test_api/: test_additional_coverage.py  test_auth.py  test_clubs.py  test_library.py  test_library_comprehensive.py  test_more_workflows.py  test_users.py
(+114 files in other folders)
